@@ -122,7 +122,7 @@ public class Mod : ModPatcherBase<Mod, Config> {
         };
 
     public override List<ModChangeLog> ChangeLog => new() {
-            new ModChangeLog(new Version(0, 9, 9), new(2023, 5, 1), new List<LogString> {
+            new ModChangeLog(new Version(0, 9, 9), new(2023, 5, 7), new List<LogString> {
                 new(LogFlag.Added,Localize.UpdateLog_V0_9_9ADD0),
                 new(LogFlag.Added,Localize.UpdateLog_V0_9_9ADD1),
                 new(LogFlag.Added,Localize.UpdateLog_V0_9_9ADD2),
@@ -130,6 +130,7 @@ public class Mod : ModPatcherBase<Mod, Config> {
                 new(LogFlag.Optimized,Localize.UpdateLog_V0_9_9OPT0),
                 new(LogFlag.Optimized,Localize.UpdateLog_V0_9_9OPT1),
                 new(LogFlag.Updated,Localize.UpdateLog_V0_9_9UPT),
+                new(LogFlag.Fixed,Localize.UpdateLog_V0_9_9FIX0),
                 new(LogFlag.Translation,Localize.UpdateLog_V0_9_9TRAN),
             }),
             new ModChangeLog(new Version(0, 9, 8), new(2023, 3, 22), new List<LogString> {
